force-app/main/default/objects/Credentials__c/fields/Assessment_Response__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Response__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessment Response</label>
    <referenceTo>Response__c</referenceTo>
    <relationshipLabel>Credentials</relationshipLabel>
    <relationshipName>Credentials</relationshipName>
    <type>Lookup</type>
</CustomField>