force-app/main/default/objects/Credentials__c/fields/Credential__c.field-meta.xml
<CustomField>
    <fullName>Credential__c</fullName>
    <label>Credential</label>
    <length>100</length>
    <type>Text</type>
</CustomField>