force-app/main/default/objects/Credentials__c/fields/Credential_Response__c.field-meta.xml
<CustomField>
    <fullName>Credential_Response__c</fullName>
    <label>Credential Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>