force-app/main/default/objects/Credentials__c/fields/Credential_Template__c.field-meta.xml
<CustomField>
    <fullName>Credential_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credential Template</label>
    <referenceTo>Credential_Template__c</referenceTo>
    <relationshipLabel>Credentials</relationshipLabel>
    <relationshipName>Credentials</relationshipName>
    <type>Lookup</type>
</CustomField>