force-app/main/default/objects/Credentials__c/fields/Document_Size_MB__c.field-meta.xml
<CustomField>
    <fullName>Document_Size_MB__c</fullName>
    <label>Document Size (MB)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>