force-app/main/default/objects/Credentials__c/fields/Document_Title__c.field-meta.xml
<CustomField>
    <fullName>Document_Title__c</fullName>
    <label>Document Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>