force-app/main/default/objects/Credentials__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credentials (Facility)</relationshipLabel>
    <relationshipName>Credentials1</relationshipName>
    <type>Lookup</type>
</CustomField>