force-app/main/default/objects/Credentials__c/fields/Insurance_Type__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Type__c</fullName>
    <label>Insurance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automobile Liability</fullName>
            </value>
            <value>
                <fullName>Excess / Umbrella Liability</fullName>
            </value>
            <value>
                <fullName>General Liability</fullName>
            </value>
            <value>
                <fullName>Professional Liability</fullName>
            </value>
            <value>
                <fullName>Workers Compensation</fullName>
            </value>
            <value>
                <fullName>Other Insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>