force-app/main/default/objects/Credentials__c/fields/Issued_By__c.field-meta.xml
<CustomField>
    <fullName>Issued_By__c</fullName>
    <label>Issued By</label>
    <length>30</length>
    <type>Text</type>
</CustomField>