force-app/main/default/objects/Credentials__c/fields/License__c.field-meta.xml
<CustomField>
    <fullName>License__c</fullName>
    <label>License</label>
    <length>30</length>
    <type>Text</type>
</CustomField>