force-app/main/default/objects/Credentials__c/fields/Next_Upload_Date_Due__c.field-meta.xml
<CustomField>
    <fullName>Next_Upload_Date_Due__c</fullName>
    <label>Next Upload Date Due</label>
    <type>Date</type>
</CustomField>